corrected horizontal scrolling mobile

--- a/style.css
+++ b/style.css
@@ -272,6 +272,11 @@ footer {
 /* Breakpoints */
 @media only screen and (max-width: 700px) {
   
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+
   main {
     display: grid;
     grid-template-columns: 1fr;
